# langchain_workout

./: Dockerfile  README.md  app.py  chat_memory.py  main.py  pyproject.toml  query.py  settings.py
app/: main.py
llm/: llm_parser.py
models/: chat.py  workout.py
scripts/: entrypoint.sh
